# summle-solver

./: .gitignore  Pipfile  README.md  base_perf.prof  perf_measure.py  performance.md  pyproject.toml  summle.py  summle_v1.py  summle_v2.py  summle_v3.py  test_solver.py  v2_perf.prof  v2_perfs.txt  v3_perf.prof
ocaml/lib/: summle.ml
src/: .gitignore  summle.py
src/algos/: base.py  v1.py  v2.py  v3.py
src/perf/: perf_measure.py
src/tests/: test_solver.py
