[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summle-solver"
version = "1.0.0"
description = "Solver for Summle puzzles"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Laurent Leconte", email = "laurent@lau.rent"},
]

dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "flameprof>=0.4",
]

[project.scripts]
summle = "summle:main"

[project.urls]
"Homepage" = "https://github.com/laurent-leconte/summle-solver"
"Bug Reports" = "https://github.com/laurent-leconte/summle-solver/issues"
"Source" = "https://github.com/laurent-leconte/summle-solver"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
